Add Instagram follow link in footer
Added a footer with an Instagram link.

--- a/index.html
+++ b/index.html
@@ -178,6 +178,12 @@ footer{
 <footer>
   © 2025 VK EDITI | Animated Editing Website | School Project
 </footer>
-
+<div style="text-align: center; margin-top: 20px;">
+    <a href="https://www.instagram.com/cute_pikachu_x2.81?igsh=NWZ3aDI2dHQ4cnJh" 
+       style="background: #E1306C; color: white; padding: 10px 20px; text-decoration: none; border-radius: 5px; font-weight: bold;">
+       Follow me on Instagram
+    </a>
+  </div>
+  
 </body>
 </html>
